.env文件添加区块确认数配置

--- a/src/.env.example
+++ b/src/.env.example
@@ -7,6 +7,7 @@ app_debug=false
 http_listen=:8000
 # polygon_api 建议前往 https://polygonscan.com 自行申请api
 polygon_api=ACM15UEMNYC5GN55YV4VH9W6CV4EUMPS8A
+polygon_confirmation=50
 
 #静态资源文件目录
 static_path=/static
