优化tg机器人添加钱包逻辑, 自动判断钱包地址的归属链

--- a/src/.env.example
+++ b/src/.env.example
@@ -5,8 +5,9 @@ app_uri=https://dujiaoka.com
 app_debug=false
 #http服务监听端口
 http_listen=:8000
-# polygon_api 建议前往 https://polygonscan.com 自行申请api
-polygon_api=ACM15UEMNYC5GN55YV4VH9W6CV4EUMPS8A
+# 自行前往 https://polygonscan.com 自行申请api
+polygon_api=
+# polygon链支付成功确认数
 polygon_confirmation=50
 
 #静态资源文件目录
